wled00/data/index.css
/* ... */
.sliderbubble {
	width: 24px;
	position: absolute;
	display: inline-block;
	border-radius: 16px;
	background: var(--c-3);
	color: var(--c-f);
	padding: 4px;
	font-size: 14px;
	right: 6px;
	transition: visibility .25s ease,opacity .25s ease;
	opacity: 0;
	visibility: hidden;
	/* left: 8px; */
	top: 4px;
}

output.sliderbubbleshow {
	visibility: visible;
	opacity: 1;
}

input[type=range] {
	-webkit-appearance: none;
	width: 100%;
	padding: 0;
	margin: 0;
	background-color: transparent;
	cursor: pointer;
}

input[type=range]:focus {
	outline: 0;
}
input[type=range]::-webkit-slider-runnable-track {
	width: 100%;
	height: 30px;
	cursor: pointer;
	background: transparent;
}
input[type=range]::-webkit-slider-thumb {
	height: 16px;
	width: 16px;
	border-radius: 50%;
	background: var(--c-f);
	cursor: pointer;
	-webkit-appearance: none;
	margin-top: 7px;
}
input[type=range]::-moz-range-track {
	width: 100%;
	height: 30px;
	background-color: rgba(0, 0, 0, 0);
}
input[type=range]::-moz-range-thumb {
	border: 0 solid rgba(0, 0, 0, 0);
	height: 16px;
	width: 16px;
	border-radius: 50%;
	background: var(--c-f);
	transform: translateY(5px);
}
#Colors input[type=range]::-webkit-slider-thumb {
	height: 18px;
	width: 18px;
	border: 2px solid var(--c-1);
	margin-top: 5px;
}
#Colors input[type=range]::-moz-range-thumb {
	border: 2px solid var(--c-1);
}

#Colors .sliderwrap {
	margin: 2px 0 0;
}

/* Dynamically hide labels */
.hd {
	display: var(--bhd);
}
/* Do not hide quick load label in simplified mode on small screen widths */
.simplified #pql .hd {
	display: var(--bhd) !important;
}

#briwrap {
	min-width: 161px;
	float: right;
	margin-top: -6px;
	padding-right: 8px;
}

#briwrap .sliderwrap {
	width: 161px;
	max-width: 161px;
}

#picker {
	margin: 4px auto 20px !important;
	max-width: max-content;
}

/* buttons */
.btn {
	padding: 8px;
	margin: 10px 4px;
	width: 230px;
	font-size: 19px;
	color: var(--c-d);
	cursor: pointer;
	border-radius: 25px;
	transition-duration: .3s;
	-webkit-backface-visibility: hidden;
	-webkit-transform: translate3d(0,0,0);
	backface-visibility: hidden;
	transform: translate3d(0,0,0);
	overflow: hidden;
	text-overflow: ellipsis;
	border: 1px solid var(--c-3);
	background-color: var(--c-3);
}
#segutil .btn-s:hover,
#segutil2 .btn-s:hover,
#putil .btn-s:hover,
.btn:hover {
	border: 1px solid var(--c-5) /*!important*/;
	background-color: var(--c-5) /*!important*/;
}
.btn-s {
	width: 100%;
	margin: 0;
}
.btn-icon {
	margin: -4px 4px -1px 0;
	vertical-align: middle;
	display: inline-block;
}
.btn-n {
	width: 230px;
	margin: 0 8px 0 0;
}
.btn-p {
	width: 120px;
	margin: 5px 0;
}
.btn-xs, .btn-pl-del, .btn-pl-add {
	width: 42px !important;
	height: 42px !important;
	text-overflow: clip;
}
.btn-xs {
	margin: 0;
}
#info .btn-xs {
	border: 1px solid var(--c-4);
}
#btns .btn-xs {
	margin: 0 4px;
}

#putil .btn-s {
	width: 135px;
}

#nodes .ibtn {
	margin: 0;
}

#segutil .btn-s, #segutil2 .btn-s, #putil .btn-s {
	background-color: var(--c-3);
	border: 1px solid var(--c-3);
}

.btn-pl-del, .btn-pl-add {
	margin: 0;
	white-space: nowrap;
}
a.btn {
	display: block;
	white-space: nowrap;
	text-align: center;
	padding: 9px 32px 7px 24px;
	position: relative;
	box-sizing: border-box;
	line-height: 24px;
}

/* Quick color select wrapper div */
#qcs-w {
	display: none;
	margin-top: 10px;
}

/* Quick color select buttons */
.qcs {
	margin: 2px 0;
	border-radius: 14px;
	display: inline-block;
	width: 28px;
	height: 28px;
	line-height: 28px;
}

/* Quick color select Black and White button (has white/black border, depending on the theme) */
.qcsb, .qcsw {
	width: 26px;
	height: 26px;
	line-height: 26px;
	border: 1px solid var(--c-f);
}

/* Hex color input wrapper div */
#hexw {
	margin-top: 5px;
}

select {
	padding: 4px 8px;
	margin: 0;
	font-size: 19px;
	background-color: var(--c-3);
	color: var(--c-d);
	cursor: pointer;
	border: 0 solid var(--c-2);
	border-radius: 20px;
	transition-duration: .5s;
	-webkit-backface-visibility: hidden;
	-webkit-transform: translate3d(0,0,0);
	-webkit-appearance: none;
	-moz-appearance: none;
	backface-visibility: hidden;
	transform: translate3d(0,0,0);
	text-overflow: ellipsis;
}
#tt {
	text-align: center;
}
select.sel-p, select.sel-pl, select.sel-ple {
	margin: 5px 0;
	width: 100%;
	height: 40px;
	padding: 0 20px 0 8px;
}
div.sel-p {
	position: relative;
}
div.sel-p:after {
	content: "";
	position: absolute;
	right: 10px;
	top: 22px;
	width: 0;
	height: 0;
	border-left: 8px solid transparent;
	border-right: 8px solid transparent;
	border-top: 8px solid var(--c-f);
}
select.sel-ple {
	text-align: center;
}
select.sel-sg {
	margin: 5px 0;
	height: 40px;
}
option {
	background-color: var(--c-3);
	color: var(--c-f);
}
input[type=number],
input[type=text] {
	background: var(--c-3);
	color: var(--c-f);
	border: 0 solid var(--c-2);
	border-radius: 10px;
	padding: 8px;
	/*margin: 6px 6px 6px 0;*/
	font-size: 19px;
	transition: background-color .2s;
	outline: 0;
	-webkit-appearance: textfield;
	-moz-appearance: textfield;
	appearance: textfield;
}

input[type=number] {
	text-align: right;
	width: 50px;
}

input[type=text] {
	text-align: center;
}

input[type=number]:focus,
input[type=text]:focus {
	background: var(--c-6);
}

input[type=number]::-webkit-inner-spin-button,
input[type=number]::-webkit-outer-spin-button {
	-webkit-appearance: none;
}

#hexw input[type=text] {
	width: 6em;
}

input[type=text].ptxt {
	width: calc(100% - 24px);
}

textarea {
	background: var(--c-2);
	color: var(--c-f);
	width: calc(100% - 14px); /* +padding=260px */
	height: 90px;
	border-radius: 5px;
	border: 2px solid var(--c-5);
	outline: 0;
	resize: none;
	font-size: 19px;
	padding: 5px;
}

.apitxt {
	height: 7em;
}

::selection {
	background: var(--c-b);
}

.ptxt {
  	margin: -1px 4px 8px !important;
}

.stxt {
	width: 50px !important;
}
/* ... */

